# picnic_opt

./: CMakeLists.txt  LICENSE  Picnic_opt.sln  Picnic_opt.vcxproj  main.c  test_picnic.c
aes/: aes128.c  aes192.c  aes256.c
include/: aes128.h  aes192.h  aes256.h  aes_wrapper.h  lowmc.h  lowmc_mpc.h  picnic.h  picnic_hash.h  picnic_opt.h  picnic_opt_hash.h  predefined_constants.h
src/: aes_wrapper.c  lowmc.c  lowmc_mpc.c  picnic.c  picnic_hash.c  picnic_opt.c  picnic_opt_hash.c  predefined_constants.c
